--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <h2>Jolly Ranchers</h2>
         <hr />
         <p>Jolly Ranchers are one of my favourite hard candies. Great taste and flavours</p>
-        <img src="img/jolly_ranchers.webp" alt="Jolly Ranchers" width="400">
+        <p class="center"><img src="img/jolly_ranchers.webp" alt="Jolly Ranchers" width="400"></p>
         <p><a href="https://en.wikipedia.org/wiki/Jolly_Rancher" target="_blank">Learn More...</a></p>
 
         <h2>UNO</h2>
         <hr />
         <p>Uno is one of my favourite card games. Really enjoyable with friends and family.</p>
-        <img src="img/uno_cards.jpg" alt="Uno Cards" width="400">
+        <p class="center"><img src="img/uno_cards.jpg" alt="Uno Cards" width="400"></p>
         <p>A few things I like about this game:</p>
         <ul>
             <li>Unexpected and Unpredictable moments</li>
@@ -27,8 +27,8 @@
 
         <h2>March</h2>
         <hr />
-        <p>March is one of my favourite months. It is also my birthmonth.</p>
-        <img src="img/march_month.webp" alt="March Month" width="400">
+        <p class="center">March is one of my favourite months. It is also my birthmonth.</p>
+        <p class="center"><img src="img/march_month.webp" alt="March Month" width="400"></p>
         <p><a href="" target="_blank"></a></p>
         
     </body>
